infra/k8s/proof/patch-remove-unsupported.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nap
  namespace: nap
